--- a/less/main.less
+++ b/less/main.less
@@ -301,6 +301,9 @@ input#hvtlhd:checked ~ span#havetoolcnt {
         width:33%;
         margin:2%;
         padding:2%;
+        img{
+            width:100%;
+        }
     }
 }
 .aboutcontent {
